GNOME Bugzilla – Bug 621940
CCShell API doesn't allow to get top-level
Last modified: 2010-11-09 17:24:10 UTC
The CCPanel and CCShell API don't allow getting the top-level window, which makes parenting error messages a bit complicated. Something like cc_shell_get_top_level_window() would be good enough.
This is needed for both gnome-bluetooth and gnome-media.
It would also be useful to parent the "Options..." dialogs in the universal-access panel.
Created attachment 172490 [details] [review] Add a get_toplevel accessor
Huh, I committed this, but I don't actually see how you're supposed to use it.
(In reply to comment #4) > Huh, I committed this, but I don't actually see how you're supposed to use it. The idea was: shell = cc_panel_get_shell (CC_PANEL (some_panel)); toplevel = cc_shell_get_toplevel (shell);
I added a tiny bit of code to actually set the "shell" variable on the panel objects: http://git.gnome.org/browse/gnome-control-center/commit/?id=5472040227a7a4feabf142827174e0a614e3e646 Thanks