Add a get_toplevel accessor to CcShell

Can be used to parent dialogs in CcPanel implementations.
https://bugzilla.gnome.org/show_bug.cgi?id=621940